--- a/src/css/App.css
+++ b/src/css/App.css
@@ -76,16 +76,22 @@ body {
 }
 
 .expansion-arrow {
-  position     : absolute;
-  right        : 0;
-  top          : 0;
-  transform    : translate3d( -90px, 25px, 0 );
-  border-radius: 50%;
-  transition   : 0.5s ease-out;
+  position        : absolute;
+  right           : 0;
+  top             : 0;
+  transform       : translate3d( -8.5vw, 3vw, 0 );
+  border-radius   : 50px;
+  transition      : 0.5s ease-out;
+  background-color: transparent;
+  width           : 50px;
 }
-.expansion-arrow.active {
-  transform: rotate(180deg) scale(0.8) translate3d( 110px, -30px, 0 );
-  transition: 0.25s ease-out;
+.expansion-arrow>span {
+  color: white;
+  transition: 0.5s ease-in-out;
+}
+.expansion-arrow>span.active {
+  transform: rotate(180deg) scale(0.8);
+  transition: 0.25s ease-in-out;
 }
 #Home {
   flex               : 0 0 auto;
@@ -299,7 +305,7 @@ body {
 }
 #Project .ImpLink:hover {
   color        : var(--UI-font-col);
-  border-radius: 3px;
+  border-radius: 5px;
   transition   : 0.2s;
   
 }
@@ -316,8 +322,8 @@ body {
   /* border        : 5px solid var(--ascent-col); */
 }
 #About {
-  padding                : 70px 50px;
-  border-radius          : 70px 70px 10px 10px;
+  padding                : 50px;
+  border-radius          : 70px 10px 70px 10px;
   /* background-image       : url(../media/Portrait.svg); */
   background-color       : #ffa5b1;
   color                  : #000000;
@@ -325,7 +331,7 @@ body {
   background-repeat      : no-repeat;
   background-size        : contain;
   box-shadow             : 0 0 25px rgba(0, 0, 0, 0.226);
-  margin                 : 10vh 20vh;
+  margin                 : 10vh 23vh;
 }
 
 #aboutContent { 
@@ -336,8 +342,8 @@ body {
 
 @media screen and (max-width: 1500px) {
   #About {
-    margin : 5em 10em;
-    padding: 50px;
+    margin : 5em 15em;
+    padding: 30px;
   } 
 }
 @media screen and (max-width: 769px) {
@@ -367,8 +373,8 @@ body {
   #About {
     margin-left  : 1em;
     margin-right : 1em;
-    border-radius: 50px 50px 10px 10px;
-    padding: 50px 0 15px 0;
+    border-radius: 50px 10px 50px 10px;
+    padding      : 5px 0;
   }
   #aboutContent { 
     flex-direction: column;
@@ -377,19 +383,35 @@ body {
 }
 
 .socials {
-  display: flex;
-  flex-direction: column;
+  display        : flex;
+  flex-direction : row;
+  justify-content: center;
+  padding-top    : 50px;
 }
 
-.icon-instagram
-{
-  content: url(../media/instagram-svgrepo-com.svg);
-  fill: var(--ascent-col);
-  scale: 0.05;
+.socials>a {
+  flex-basis: 50px;
 }
-.icon-twitter
-{
-  content: url(../media/twitter-svgrepo-com.svg);
-  fill: var(--ascent-col);
-  scale: 0.05;
+
+.icon-instagram, .icon-twitter, .icon-github, .icon-gmail {
+  transform: scale(0.9);
+}
+.icon-instagram {
+  content: url(../media/instagram.svg);
+}
+.icon-twitter {
+  content: url(../media/twitter.svg);
+}
+.icon-github {
+  content: url(../media/github.svg);
+}
+.icon-gmail {
+  content: url(../media/gmail.svg);
+}
+
+@media screen and (max-width: 1500px) {
+  .icon-instagram, .icon-twitter, .icon-github
+  {
+    transform: scale(0.75);
+  }
 }
