--- a/src/css/App.css
+++ b/src/css/App.css
@@ -94,8 +94,8 @@ body {
   transition: 0.25s ease-in-out;
 }
 #Home {
-  flex               : 0 0 auto;
   display            : flex;
+  flex               : 0 0 auto;
   flex-direction     : row;
   align-items        : center;
   background-color   : #000000;
@@ -105,9 +105,9 @@ body {
   color              : white;
   border-radius      : 15px;
   text-align         : justify;
-  height             : 97.6vh;
   padding-bottom     : 10vw;
   margin             : 1.15vh;
+  height             : 97.7vh;
 }
 #Home>p
 {
@@ -188,7 +188,7 @@ body {
   #Home {
     padding: 0 0 5em 0;
     margin: 0.8vh;
-    height: 98.2vh;
+    height: 98.4vh;
     background-position: 40%;
   }
   .main-logo {
@@ -258,6 +258,24 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 500;
 }
+#About {
+  padding                : 50px;
+  border-radius          : 70px 10px 70px 10px;
+  /* background-image       : url(../media/Portrait.svg); */
+  background-color       : #ffa5b1;
+  color                  : #000000;
+  background-position    : center;
+  background-repeat      : no-repeat;
+  background-size        : contain;
+  box-shadow             : 0 0 25px rgba(0, 0, 0, 0.226);
+  margin                 : 10vh 25vh;
+}
+
+#aboutContent { 
+  display : flex;
+  flex-direction: row;
+  align-items: center;
+}
 
 #About p{
   font-size  : 3em;
@@ -280,6 +298,10 @@ body {
   #About p{
     font-size: 1.9em;
   }
+  #About {
+    margin : 5em 15em;
+    padding: 30px;
+  } 
 }
 @media screen and (max-width: 1280px) {
   #Project p {
@@ -295,6 +317,38 @@ body {
   }
   #About p{
     font-size: 1.8em;
+  }
+  #Project>div, #About>div {
+    margin : 2.2em 1em;
+    padding: 10px;
+  } 
+  #Project>header, #About>header {
+    margin-top    : 0.5em;
+    font-size     : 2.5em;
+    letter-spacing: 1em;
+    text-indent   : 1em;
+    text-transform: uppercase;
+  }
+  #Project p {
+    font-size : 1.5em;
+    margin    : 15px 5px;
+  }
+  #Project img, #About img {
+    width : 95%;
+    margin: 10px 0 0 0;
+  }
+  #Project img, video, #About img, video{
+    margin: 10px 0 0 0;
+  }
+  #About {
+    margin-left  : 1em;
+    margin-right : 1em;
+    border-radius: 50px 10px 50px 10px;
+    padding      : 5px 0;
+  }
+  #aboutContent { 
+    flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -321,66 +375,6 @@ body {
   /* margin         : 0 0 30px 0; */
   /* border        : 5px solid var(--ascent-col); */
 }
-#About {
-  padding                : 50px;
-  border-radius          : 70px 10px 70px 10px;
-  /* background-image       : url(../media/Portrait.svg); */
-  background-color       : #ffa5b1;
-  color                  : #000000;
-  background-position    : center;
-  background-repeat      : no-repeat;
-  background-size        : contain;
-  box-shadow             : 0 0 25px rgba(0, 0, 0, 0.226);
-  margin                 : 10vh 23vh;
-}
-
-#aboutContent { 
-  display : flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-@media screen and (max-width: 1500px) {
-  #About {
-    margin : 5em 15em;
-    padding: 30px;
-  } 
-}
-@media screen and (max-width: 769px) {
-  #Project>div, #About>div {
-    margin : 2.2em 1em;
-    padding: 10px;
-  } 
-  #Project>header, #About>header {
-    margin-top    : 0.5em;
-    font-size     : 2.5em;
-    letter-spacing: 1em;
-    text-indent   : 1em;
-    text-transform: uppercase;
-  }
-  #Project p {
-    font-size : 1.5em;
-    margin    : 15px 5px;
-  }
-  #Project img, #About img {
-    width : 95%;
-    margin: 10px 0 0 0;
-  }
-  #Project img, video, #About img, video{
-    margin: 10px 0 0 0;
-  }
-
-  #About {
-    margin-left  : 1em;
-    margin-right : 1em;
-    border-radius: 50px 10px 50px 10px;
-    padding      : 5px 0;
-  }
-  #aboutContent { 
-    flex-direction: column;
-    align-items: center;
-  }
-}
 
 .socials {
   display        : flex;
@@ -393,7 +387,7 @@ body {
   flex-basis: 50px;
 }
 
-.icon-instagram, .icon-twitter, .icon-github, .icon-gmail {
+.icon-instagram, .icon-twitter, .icon-github, .icon-gmail, .icon-blog {
   transform: scale(0.9);
 }
 .icon-instagram {
@@ -407,6 +401,10 @@ body {
 }
 .icon-gmail {
   content: url(../media/gmail.svg);
+}
+.icon-blog {
+  content: url(../media/LINE_Logo.svg);
+  transform: scale(1.1) translateY(2px);
 }
 
 @media screen and (max-width: 1500px) {
